#472 - Fix vertical spacing of author social media links, ensure bios… (#505)
* #472 - Fix vertical spacing of author social media links, ensure bios are wrapped in <p></p>

* #472 - With rebuilt CSS

--- a/scss/_author.scss
+++ b/scss/_author.scss
@@ -26,6 +26,11 @@
     }
   }
 
+  .authorSocialMediaLink {
+    padding-top: $smallLayoutUnit;
+    padding-bottom: $smallLayoutUnit;
+  }
+
   a {
     display: block;
   }
